Fixed misaligned "load more" spinner on activity stream

--- a/wp-content/themes/nycga/style.css
+++ b/wp-content/themes/nycga/style.css
@@ -463,6 +463,11 @@ div.item-list-tabs ul li.feed {
 
 }
 
+ul li.loading a {
+	padding-right: 35px !important;
+	margin-right: -35px;
+}
+
 /* Get rid of buttons that say the last time there was activity */
 span.activity {
   	display: none;
